Fix intro overflow

--- a/app/style.css
+++ b/app/style.css
@@ -11,9 +11,8 @@ body {
 
 #intro {
     width: 100vw;
-    height: 85vh;
     background: radial-gradient(ellipse at bottom, rgba(255,255,255,1) 0%,rgba(255,198,178,1) 100%);
-    /* background-size: 100vw 200vh; */
+    padding: 0 0 1rem;
 }
 #logo {
     color: #FF683A;
